on mobile, fixed and more compact header, other minor header styles

--- a/app/assets/stylesheets/mediaqueries.css
+++ b/app/assets/stylesheets/mediaqueries.css
@@ -56,15 +56,12 @@
   .login {
     padding: 2px 2px;
   }
-  .login_slash {
-    display: none;
-  }
 }
 
 @media (max-width: 965px) { 
 
   #header span.menu_link {
-    line-height: 51px;
+    line-height: 46px;
     width: 45px !important;
     font-size: 14px !important;
     border-right: 4px solid #D6C0AA;
@@ -121,14 +118,26 @@
 }
 
 @media (max-width: 1065px) {
-  .login_region {
+  .login_region a.loggedin {
+    font-size: 15px;
+    line-height: 26px;
+    padding-top: 10px;
+  }
+  .login_region a {
     font-size: 12px;
-    width: 75px;
-    margin-top: 0;
     line-height: 23px;
     padding: 3px;
     text-align: center;
-    border: 4px solid #D6C0AA;
+  }
+  .login_region {
+    margin-top: 0;
+    width: 65px;
+    padding: 0;
+    line-height: 20px;
+    text-align: right;
+  }
+  .login_slash {
+    display: none;
   }
 }
 
@@ -138,7 +147,7 @@
     width: 75px;
     margin-top: 0;
     line-height: 13px;
-    padding: 6px 6px;
+    padding: 3px 4px 4px;
     text-align: center;
   }
 }
